--- a/README.adoc
+++ b/README.adoc
@@ -16,8 +16,14 @@ https://github.com/IanDarwin/.
 To set up the environment at home or work, you should try the following:
 
 . Make sure you have Java 8, Maven 3 installed and on your PATH.
+. Make sure you have Wildfly 8 installed but not running;
+you could use a different App Server but you'd have to change
+every Maven configuration.
 . Git clone all the projects listed above into the same directory (in the course we use C:\ but anyplace *should* work).
 . Rename CourseFiles936 CourseFiles
+. Copy or merge Coursefiles/configs/standalone-full.xml into wildfly
+. Start Wildfly: cd WILDFLY_HOME; bin/standalone -c standalone-full.xml
+. If it doesn't start successfully, iterate on your configuration.
 . Run the uber-script: `cd Coursefiles; sh scripts/all-in`
 The script produces tons of output so it is set to fail on the first error.
 
@@ -27,4 +33,5 @@ do
 	git clone https://github.com/$d
 done
 mv CourseFiles936 CourseFiles
+cd Coursefiles; sh scripts/all-in
 ----
