--- a/sourcecode/ex42solution/README.adoc
+++ b/sourcecode/ex42solution/README.adoc
@@ -1,25 +1,5 @@
-== Ex42solution -- Message Driven Bean
+= Ex41 Bonus solution
 
-To run this at home you will have to do some configuration!
-
-On wildfly you can set up the queue like so:
-
-$ bin/jboss-cli.sh
-[standalone@localhost:9990 /] connect
-[standalone@localhost:9990 /] jms-queue add --queue-address=feedbackQueue --entries=jms/queue/feedbackQueue,java:jboss/exported/jms/queue/feedbackQueue
-[standalone@localhost:9990 /] /subsystem=messaging/hornetq-server=default/jms-queue=feedbackQueue:read-resource                                        
-{
-    "outcome" => "success",
-    "result" => {
-        "durable" => true,
-        "entries" => [
-            "jms/queue/feedbackQueue",
-            "java:jboss/exported/jms/queue/feedbackQueue"
-        ],
-        "selector" => undefined
-    }
-}
-[standalone@localhost:9990 /] quit
-$ 
-
-This is based upon https://docs.jboss.org/author/display/WFLY8/Messaging+configuration
+This has to be deployed as a WAR so that the datamodel.jar file
+will be included (or else we'd have to do funny things in Maven
+to make it work, that might not fly in Eclipse).
