--- a/sourcecode/ex81solution/README.adoc
+++ b/sourcecode/ex81solution/README.adoc
@@ -1,3 +1,3 @@
 = ex81solution
 
-This is not a complete project, just a few files for you to copy.
+This is a cut-down project, with just the bits needed to make Security work.
