--- a/sourcecode/UPDATING.adoc
+++ b/sourcecode/UPDATING.adoc
@@ -1,5 +1,7 @@
 Things to do on the load or your dev machine when upgrading
 
+General: set up the command prompt to start in CourseFiles.
+
 Close eclipse.
 
 cd CourseFiles
