--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,8 @@ and might work on MS-Windows with CygWin or equivalent):
 * Make sure you have Java 8, Maven 3, and git installed and on your PATH.
 * Make sure you have Wildfly 8 installed but not running;
 you could use a different App Server but you'd have to change
-all the Maven deployment configurations (they have GlassFish and Tomcat in place but unmaintained!!).
+all the Maven deployment configurations (they have GlassFish and Tomcat in place but unmaintained!!)
+AND the DataSource configurations (alas, the EE spec doesn't nail down how to do this).
 * Git clone all the projects listed above into a single parent directory (in the course we use C:\ but anyplace *should* work).
 ----
 cd WHERE_YOU_WANT_IT
