--- a/README.adoc
+++ b/README.adoc
@@ -21,13 +21,13 @@ the solutions so they are always in synch.
 These projects are all hosted on the course author's github, at
 https://github.com/IanDarwin/.
 
-== Setup
+== Set Up the environment at home or work
 
 To set up the environment at home or work, you should try the following
 (the implementing command examples are for Unix, Linux, Mac OS X,
 and might work on MS-Windows with CygWin or equivalent):
 
-* Make sure you have Java 8, Maven 3, and git installed and on your PATH.
+* Make sure you have Java 8, Maven 3, and _git_ installed and on your PATH.
 * Make sure you have Wildfly 8 installed but not running;
 you could use a different App Server but you'd have to change
 all the Maven deployment configurations (they have GlassFish and Tomcat in place but unmaintained!!)
@@ -35,7 +35,8 @@ AND the DataSource configurations (alas, the EE spec doesn't nail down how to do
 * Git clone all the projects listed above into a single parent directory (in the course we use C:\ but anyplace *should* work).
 ----
 cd WHERE_YOU_WANT_IT
-for repo in LearningTree/TicketManorJava IanDarwin/{CourseFiles936,jsfdemo,jpademo,makehandsons,clublist,javasrc,darwinsys-api}
+for repo in LearningTree/TicketManorJava \
+	IanDarwin/{CourseFiles936,jsfdemo,jpademo,makehandsons,clublist,javasrc,darwinsys-api}
 do
     git clone https://github.com/$repo
 done
