--- a/README.adoc
+++ b/README.adoc
@@ -27,8 +27,8 @@ To set up the environment at home or work, you should try the following
 (the implementing command examples are for Unix, Linux, Mac OS X,
 and might work on MS-Windows with CygWin or equivalent):
 
-* Make sure you have Java 8, Maven 3, and _git_ installed and on your PATH.
-* Make sure you have Wildfly 8 installed but not running;
+* Make sure you have Java (10 or 11), Maven 3, and _git_ installed and on your PATH.
+* Make sure you have Wildfly installed but not running;
 you could use a different App Server but you'd have to change
 all the Maven deployment configurations (they have GlassFish and Tomcat in place but unmaintained!!)
 AND the DataSource configurations (alas, the EE spec doesn't nail down how to do this).
