--- a/sourcecode/UPDATING.adoc
+++ b/sourcecode/UPDATING.adoc
@@ -2,11 +2,11 @@
 
 Things to do on the load or your dev machine when upgrading.
 
-General: set up the command prompt to start in CourseFiles.
+General: set up the command prompt to start in CourseFiles936.
 
 Close eclipse.
 
-cd CourseFiles
+cd CourseFiles936
 
 git pull # Important to do this first to get the latest version of all-in script!
 
@@ -16,9 +16,10 @@ Run bash scripts/all-in to regenerate and test almost everthing. Runs for a whil
 
 start Eclipse
 
+If JBoss tools are installed, an annoying news page appears.
 Window->Prefs->JBoss Tools->JBoss Central - uncheck Show at Startup. Click OK
 
-remove junitbasic, ex41bonus, ex41bonussolution - both from eclipse and from the filesystem!
+Remove junitbasic, ex41bonus, ex41bonussolution - both from eclipse and from the filesystem!
 
 New->Java Project at donow21 (replaces junitbasic), donow21solution, ex43, ex43client, ex43solution, ex43clientsolution
 # MAKE SURE each one says "The wizard will configure..." after you type the last character!
