--- a/README.adoc
+++ b/README.adoc
@@ -41,11 +41,12 @@ AND the DataSource configurations (alas, the EE spec doesn't nail down how to do
 ** git
 ** diff
 ** unzip
-* Git clone all the projects listed above into a single parent directory (in the course we use C:\ but anyplace *should* work).
+* Git clone all the projects into a single parent directory
+(in the course we use C:\ but anyplace *should* work):
 ----
-cd WHERE_YOU_WANT_IT
+cd WHERE_YOU_INATALLED
 for repo in LearningTree/TicketManorJava \
-	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-samples,makehandsons,createprojects}
+	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-exaamples,makehandsons,createprojects}
 do
     git clone https://github.com/$repo
 done
@@ -61,6 +62,13 @@ sh scripts/all-in
 The script produces tons of output so it is set to fail on the first error,
 otherwise error messages would be missed.
 
+=== Command Line setup
+
+Add the following to your PATH:
+
+. Java (if not done automatically)
+. WHERE_YOU_INSTALLED/bats (windows only)
+. postgresql/bin - for psql command
 === Eclipse Workspace Setup
 
 The normal intention is that the _sourcecode_ subdirectory should be the base of an Eclipse workspace.
