--- a/databases.adoc
+++ b/databases.adoc
@@ -41,5 +41,32 @@ Try the following:
 	\?
 	\q
 
+We used psql to set up the persistent databases, as follows:
+
+	psql <<!
+	create user student password 'student' login nosuperuser;
+	create database ticketmanor owner student;
+	create database custfeedback owner student;
+	create database jpademo owner student;
+	create database jpa_basic owner student;
+	create database jpa_inheritance owner student;
+	create database jpa_aggregation owner student;
+	!
+
+These databases are used as follows:
+
+[[Databases]]
+.The Persisten Databases
+[options="header",cols="2,4,5"]
+|====
+|DB name|Server DataSource|Description
+|ticketmanor|TicketManorDS|Main TicketManor demo db
+|jpademo|n/a|jpademo project
+|jpa_basics|N/A|HO 3.x
+|jpa_aggregation|N/A|HO4.1
+|jpa_inheritance|N/A|HO4.2
+|CustFeedback|CustFeedbackDS|Customer Feedback (ex5.3, formerly ex52DS)
+|====
 The GUI interface is started from the Start Menu or the Desktop icon.
+
 
