--- a/databases.adoc
+++ b/databases.adoc
@@ -41,6 +41,9 @@ Try the following:
 	\?
 	\q
 
+The GUI interface is started from the Start Menu, under PostgreSQL 10,
+choose the pgAdmin application. Expand the Servers list at the left.
+
 We used psql to set up the persistent databases, as follows:
 
 	psql <<!
@@ -67,6 +70,5 @@ These databases are used as follows:
 |jpa_inheritance|N/A|HO4.2
 |CustFeedback|CustFeedbackDS|Customer Feedback (ex5.3, formerly ex52DS)
 |====
-The GUI interface is started from the Start Menu or the Desktop icon.
 
 
