--- a/README.adoc
+++ b/README.adoc
@@ -93,7 +93,8 @@ The normal intention is that the _sourcecode_ subdirectory should be the base of
 
 * Start Eclipse
 * If it opens an existing workspace, do File->Switch Workspace. If not it will ask you for the workspace.
-Browse to where you downloaded CourseFiles936, and select (but don't double click on) CourseFiles936/sourcecode. Click OK.
+Browse to where you downloaded CourseFiles936, and select (but don't double click 
+on) *CourseFiles936/sourcecode*. Click OK.
 * Then do File->New Project->new Java Project, browse to the TicketManorJava folder, select but don't double-click
 on datamodel,
 which should cause the dialog to change the text in its bottom panel to something like
