--- a/databases.adoc
+++ b/databases.adoc
@@ -33,7 +33,7 @@ and psql-specific commands that begin with a backslash - \d for Describe,
 \q for Quit, and so on.
 Try the following:
 
-	psql -d ex-jpa
+	psql -d jpa_basic
 	\l
 	\d
 	\d person
@@ -42,7 +42,9 @@ Try the following:
 	\q
 
 The GUI interface is started from the Start Menu, under PostgreSQL 10,
-choose the pgAdmin application. Expand the Servers list at the left.
+choose the pgAdmin application. Expand the Servers list at the left,
+then drill down to Databases, then jpademo, then Schemas, then public,
+then tables, and you can view or modify the tables in the jpademo database.
 
 We used psql to set up the persistent databases, as follows:
 
